--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   </div>
                   <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                        <div class="top-box">
-                        <p>"You miss 100% of the sends you don't send"</p>
+                        <p>"Top banner quote placeholder"</p>
                     </div>
                   </div>
                </div>
@@ -103,8 +103,8 @@
                   <img class="first-slide" src="images/banner2.jpg" alt="First slide">
                   <div class="container">
                      <div class="carousel-caption relative">
-                        <h1>My <br> <strong class="black_bold">Phat </strong><br>
-                           <strong class="yellow_bold">Dick </strong></h1>
+                        <h1>TITLE 1 <br> <strong class="black_bold"> 2 </strong><br>
+                           <strong class="yellow_bold">3 </strong></h1>
                         <p>This is the first slide in this carousel <br>
                           I don't really know what's going on </p>
                         <a  href="#">see more Products</a>
@@ -115,8 +115,8 @@
                   <img class="second-slide" src="images/banner2.jpg" alt="Second slide">
                   <div class="container">
                      <div class="carousel-caption relative">
-                        <h1>Come <br> <strong class="black_bold">Smoke </strong><br>
-                           <strong class="yellow_bold">Crack </strong></h1>
+                        <h1>TITLE 2 <br> <strong class="black_bold">3 </strong><br>
+                           <strong class="yellow_bold">4 </strong></h1>
                         <p>This is the second slide in this carousel<br>
                           I still don't know what's going on</p>
                         <a  href="#">see more Products</a>
@@ -127,8 +127,8 @@
                   <img class="third-slide" src="images/banner2.jpg" alt="Third slide">
                   <div class="container">
                      <div class="carousel-caption relative">
-                        <h1>And <br> <strong class="black_bold">Get </strong><br>
-                           <strong class="yellow_bold">Faded af </strong></h1>
+                        <h1>TITLE 3 <br> <strong class="black_bold">4 </strong><br>
+                           <strong class="yellow_bold">5 </strong></h1>
                         <p>This is the third slide in this carousel<br>
                           I will never know what's going on</p>
                         <a  href="#">see more Products</a>
@@ -364,7 +364,7 @@
             <div class="container">
               <div class="carousel-caption text-bg">
                <div class="img_bg">
-                  <i><img src="images/lllll.png"/><span>Jone Due<br><strong class="date">12/02/2019</strong></span></i>
+                  <i><img src="images/head.jpg"/><span>Jone Due<br><strong class="date">12/02/2019</strong></span></i>
 
                </div>
 
@@ -378,7 +378,7 @@
             <div class="container">
               <div class="carousel-caption text-bg">
                 <div class="img_bg">
-                  <i><img src="images/lllll.png"/><span>Jone Due<br><strong class="date">12/02/2019</strong></span></i>
+                  <i><img src="images/head.jpg"/><span>Jone Due<br><strong class="date">12/02/2019</strong></span></i>
 
                </div>
                 <p>You guys rock! Thank you for making it painless, pleasant and most of all hassle free! I wish I would have thought of it first. I am really satisfied with my first laptop service.<br>
@@ -391,7 +391,7 @@
             <div class="container">
               <div class="carousel-caption text-bg">
                  <div class="img_bg">
-                  <i><img src="images/lllll.png"/><span>Jone Due<br><strong class="date">12/02/2019</strong></span></i>
+                  <i><img src="images/head.jpg/><span>Jone Due<br><strong class="date">12/02/2019</strong></span></i>
 
                </div>
                 <p>You guys rock! Thank you for making it painless, pleasant and most of all hassle free! I wish I would have thought of it first. I am really satisfied with my first laptop service.<br>
