changed about section
about section

--- a/about.html
+++ b/about.html
@@ -119,9 +119,9 @@
          </dir>
           <dir class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
             <div class="about_box">
-               <h3>Who am me?</h3>
-               <p>Who am me? Me am dumb bitch. Technically me also am enginur, but also sometimes fotografur. This is me site. Tank for visit.</p>
-               <p>Idk what else to say hi manoj.</p>
+               <h3>Hey! Welcome In!</h3>
+               <p>I'm Owen, [insert more stuff here]</p>
+               <p>Feel free to poke around!</p>
             </div>
          </dir>
       </div>
