--- a/blog.html
+++ b/blog.html
@@ -77,7 +77,7 @@
                            <ul class="menu-area-main">
                               <li > <a href="index.html">Home</a> </li>
                               <li> <a href="about.html">About</a> </li>
-                              <li> <a href="product.html">product</a> </li>
+                              <li> <a href="Professional_Experience.html">Professional Experience</a> </li>
                               <li class="active"> <a href="blog.html"> Blog</a> </li>
                               <li> <a href="contact.html">Contact</a> </li>
                               <li class="mean-last"> <a href="#contact">signup</a> </li>
