--- a/Professional_Experience.html
+++ b/Professional_Experience.html
@@ -77,7 +77,7 @@
                            <ul class="menu-area-main">
                               <li > <a href="index.html">Home</a> </li>
                               <li> <a href="about.html">About</a> </li>
-                              <li class="active"> <a href="product.html">product</a> </li>
+                              <li class="active"> <a href="Professional_Experience.html">Professional Experience</a> </li>
                               <li> <a href="blog.html"> Blog</a> </li>
                               <li> <a href="contact.html">Contact</a> </li>
                               <li class="mean-last"> <a href="#contact">signup</a> </li>
@@ -100,7 +100,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <h2>our product</h2>
+                        <h2>Professional Experience</h2>
                     </div>
                 </div>
             </div>
