--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                            <ul class="menu-area-main">
                               <li class="active"> <a href="index.html">Home</a> </li>
                               <li> <a href="about.html">About</a> </li>
-                              <li> <a href="product.html">product</a> </li>
+                              <li> <a href="Professional_Experience.html">Professional Experience</a> </li>
                               <li> <a href="blog.html"> Blog</a> </li>
                               <li> <a href="contact.html">Contact</a> </li>
                               <li class="mean-last"> <a href="#contact">signup</a> </li>
@@ -100,14 +100,14 @@
 
             <div class="carousel-inner">
                <div class="carousel-item active">
-                  <img class="first-slide" src="images/banner2.jpg" alt="First slide">
+                  <img class="first-slide" src="images/banner1.jpg" alt="First slide">
                   <div class="container">
                      <div class="carousel-caption relative">
-                        <h1>TITLE 1 <br> <strong class="black_bold"> 2 </strong><br>
-                           <strong class="yellow_bold">3 </strong></h1>
-                        <p>This is the first slide in this carousel <br>
-                          I don't really know what's going on </p>
-                        <a  href="#">see more Products</a>
+                        <h1> <br><strong class="yellow_bold">Hi, I'm Owen!</strong><br> <strong class="yellow_bold">Welcome to my website</strong><br>
+                           <p style="color: white;">I'm a mechanical and aerospace engineer with a passion for building web applications. <br>
+                          Feel free to poke around!</p>
+                          <br>
+                        <a  href="about.html">About Me</a>
                      </div>
                   </div>
                </div>
@@ -115,23 +115,23 @@
                   <img class="second-slide" src="images/banner2.jpg" alt="Second slide">
                   <div class="container">
                      <div class="carousel-caption relative">
-                        <h1>TITLE 2 <br> <strong class="black_bold">3 </strong><br>
-                           <strong class="yellow_bold">4 </strong></h1>
-                        <p>This is the second slide in this carousel<br>
-                          I still don't know what's going on</p>
-                        <a  href="#">see more Products</a>
+                        <h1><br> <strong class="yellow_bold"></strong>Here's some stuff I've worked on</strong><br>
+                           <p style="color: white;">I'm a big fan of the outdoors, and I love to go hiking, camping, and fishing. <br>
+                          I will never know what's going on</p>
+                          <br>
+                        <a  href="Professional_Experience.html">Professional Experience</a>
                      </div>
                   </div>
                </div>
                <div class="carousel-item">
-                  <img class="third-slide" src="images/banner2.jpg" alt="Third slide">
+                  <img class="third-slide" src="images/banner3.jpg" alt="Third slide">
                   <div class="container">
                      <div class="carousel-caption relative">
-                        <h1>TITLE 3 <br> <strong class="black_bold">4 </strong><br>
-                           <strong class="yellow_bold">5 </strong></h1>
-                        <p>This is the third slide in this carousel<br>
+                        <h1><br> <strong style="color: white">What else do I do?</strong><br>
+                        <p style="color: white;">I'm a big fan of the outdoors, and I love to go hiking, camping, and fishing. <br>
                           I will never know what's going on</p>
-                        <a  href="#">see more Products</a>
+                          <br>
+                        <a  href="blog.html">Blog</a>
                      </div>
                   </div>
                </div>
