finished up carousel
carousel

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                   <img class="first-slide" src="images/banner1.jpg" alt="First slide">
                   <div class="container">
                      <div class="carousel-caption relative">
-                        <h1> <br><strong class="yellow_bold">Hi, I'm Owen!</strong><br> <strong class="yellow_bold">Welcome to my website</strong><br>
-                           <p style="color: white;">I'm a mechanical and aerospace engineer with a passion for building web applications. <br>
+                        <h1> <br><strong class="yellow_bold">Hi, I'm Owen!</strong><br> <strong class="yellow_bold">Welcome to </strong> <strong style="color: white;">my website</strong><br>
+                           <p style="color: white;">I'm a mechanical and aerospace engineer with a "passion" for building "web applications". <br>
                           Feel free to poke around!</p>
-                          <br>
+                          <br> <br>
                         <a  href="about.html">About Me</a>
                      </div>
                   </div>
@@ -115,10 +115,10 @@
                   <img class="second-slide" src="images/banner2.jpg" alt="Second slide">
                   <div class="container">
                      <div class="carousel-caption relative">
-                        <h1><br> <strong class="yellow_bold"></strong>Here's some stuff I've worked on</strong><br>
-                           <p style="color: white;">I'm a big fan of the outdoors, and I love to go hiking, camping, and fishing. <br>
-                          I will never know what's going on</p>
-                          <br>
+                        <h1><br> <strong class="yellow_bold">What Do I Get Paid To Do?</strong><br>
+                           <p style="color: white;">I have experience in designing and integrating propulsion components for submarines, fighter jets, and heavy-lift helicopters<br>
+                          I pride myself in my ability to learn new things quickly and to lead a team of interdisciplinary engineers across different organizations</p>
+                          <br> <br>
                         <a  href="Professional_Experience.html">Professional Experience</a>
                      </div>
                   </div>
@@ -127,7 +127,7 @@
                   <img class="third-slide" src="images/banner3.jpg" alt="Third slide">
                   <div class="container">
                      <div class="carousel-caption relative">
-                        <h1><br> <strong style="color: white">What else do I do?</strong><br>
+                        <h1><br> <strong class="yellow_bold">What Do I Do For Fun?</strong><br>
                         <p style="color: white;">I'm a big fan of the outdoors, and I love to go hiking, camping, and fishing. <br>
                           I will never know what's going on</p>
                           <br>
