--- a/about.html
+++ b/about.html
@@ -261,9 +261,9 @@
                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
                   <div class="contact">
                     <h3>conatct me</h3>
-                    <span>192 Montauk Ave, Apt 3<br>
-                      New London, Connecticut <br>
-                       408 780 6093</span>
+                    <span>pls dont<br>
+                      [insert contact info]<br>
+                       [insert contact info]</span>
                   </div>
                </div>
                  <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
